# Chirp

./: .env.example  .gitignore  APP.md  AUDIT.md  CHIRP-SPEC.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-24-v1-launch-pass.md
docs/superpowers/specs/: 2026-03-21-ui-redesign-design.md  2026-03-24-chirp-pro-freemium-design.md  2026-03-24-model-naming-onboarding-email-tipjar-design.md  2026-03-24-v1-launch-telemetry-design.md
installer-wrapper/: Cargo.toml  build.rs
installer-wrapper/src/: main.rs
scripts/: benchmark.py  benchmark_compare.py  benchmark_transcripts.json  download_benchmark_models.sh  download_models.py  prune_vocab.py  release.sh
scripts/benchmark_results/: Qwen_Qwen3-0.6B-Q4_K_M.json  Qwen_Qwen3-1.7B-Q4_K_M.json  Qwen_Qwen3-4B-Q4_K_M.json  Qwen_Qwen3-8B-Q4_K_M.json  chirp-cleanup-0.6b-q2_k.json  chirp-cleanup-0.6b-q4_k_m.json  chirp-cleanup-q4_k_m.json  google_gemma-3-1b-it-Q4_K_M.json  google_gemma-3-4b-it-Q4_K_M.json  microsoft_Phi-4-mini-instruct-Q4_K_M.json  qwen2.5-1.5b-instruct-q4_k_m.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: generate-bmp.mjs  png-to-bmp.mjs
src-tauri/sherpa-onnx-lib/: onnxruntime.def  onnxruntime.exp
src-tauri/src/: announcements.rs  audio.rs  cleanup.rs  commands.rs  dictionary.rs  feedback.rs  file_transcribe.rs  history.rs  hotkey.rs  hotkey_windows.rs  inject.rs  lib.rs  llm.rs  native_hotkey.rs  settings.rs  snippets.rs  state.rs  transcribe.rs
src/components/onboarding/: HelpImprove.tsx  Hotkey.tsx  MicTest.tsx  Microphone.tsx  ModelDownload.tsx  Onboarding.tsx  PermissionsStep.tsx  SetupStep.tsx  SmartCleanup.tsx  Welcome.tsx
src/components/overlay/: Done.tsx  Error.tsx  Listening.tsx  Overlay.tsx  Polishing.tsx  Processing.tsx
src/components/settings/: AboutPage.tsx  AiCleanupPage.tsx  AnnouncementBanner.tsx  (+11 more)
src/hooks/: useAudio.ts  useCleanupToggle.ts  useCountUp.ts  useHotkeyRecorder.ts  useLlmDownloaded.ts  useRecording.ts  useSettingsSync.ts  useTauri.ts
src/lib/: constants.ts  hotkeyCapture.ts  sounds.ts  utils.ts
src/stores/: appStore.ts
src/styles/: globals.css
training/: README.md  clean_data.py  export_gguf.py  export_onnx.py  generate_data.py  requirements.txt  run_overnight.sh  run_pipeline.sh  test_llm.py  train.py  train_qwen.py  tune_prompt.py
training/data/: training_pairs.jsonl  training_pairs_clean.jsonl
training/models/: chirp-cleanup-0.6b-q4_k_m.gguf
(+12 files in other folders)
