[package]
name = "chirp"
version = "1.0.0"
description = "Free, local voice-to-text for everyone"
authors = ["Pieter de Bruijn"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
sherpa-onnx = "0.1.10"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
rust_tokenizers = "8"
arboard = "3"
enigo = "0.6.1"
tokio = { version = "1", features = ["sync", "time", "fs"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "5"
regex = "1"
tar = "0.4"
bzip2 = "0.5"
