[package]
name = "chirp"
version = "1.0.0"
description = "Free, local voice-to-text for everyone"
authors = ["Pieter de Bruijn"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.57"
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
sherpa-onnx = "0.1.10"
enigo = "0.6.1"
tokio = { version = "1", features = ["sync", "time", "fs", "process"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
dirs = "5"
regex = "1"
tar = "0.4"
bzip2 = "0.5"
arboard = "3.6.1"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
tauri-plugin-dialog = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

